--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ dependencies { // 라이브러리 설정하는 항목.
 	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
 
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
-	implementation 'org.springframework.book:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 }
 
 // test시에 junit을 사용한다.
